--- a/src/components/canvas.css
+++ b/src/components/canvas.css
@@ -8,7 +8,7 @@
   overflow: hidden;
 }
 
-.block-image {
+.cell-image {
   width: 3em;
 }
 
@@ -26,10 +26,4 @@
   background: white;
   border-spacing: 0;
   margin-bottom: 3em;
-}
-
-.curr-block-display {
-  width: 3em;
-  border-radius: 50%;
-  margin: 0.5em;
 }
