--- a/src/components/toolbar.css
+++ b/src/components/toolbar.css
@@ -15,6 +15,7 @@
 .toolbar {
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
 }
 
@@ -31,4 +32,5 @@
   border-radius: 50%;
   margin: 0.5em;
   background: white;
+  z-index: 2;
 }
