--- a/src/components/toolbar.css
+++ b/src/components/toolbar.css
@@ -29,8 +29,16 @@
 
 .curr-block-display {
   width: 4em;
+  height: 4em;
   border-radius: 50%;
   margin: 0.5em;
   background: white;
   z-index: 2;
+}
+
+.download-button {
+  width: 4em;
+  height: 4em;
+  border-radius: 50%;
+  margin: 0.5em;
 }
