--- a/src/components/canvas.css
+++ b/src/components/canvas.css
@@ -3,8 +3,8 @@
   border: 1px solid grey;
   padding: 0;
   margin: 0;
-  height: 1.5em;
-  width: 1.5em;
+  height: 1em;
+  width: 1em;
   cursor: cell;
 }
 
@@ -24,6 +24,11 @@
 }
 
 .canvas {
+
+  border: 1px solid red;
+}
+
+.canvas-holder {
   position: fixed;
   display: flex;
   flex-direction: column;
